--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
     <link rel="icon" href="cc.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- or -->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
     <div class="container">
         <div class="profile">
-            <img src="1.jpg" alt="1 Picture" id="1-pic" />
+            <a href="https://www.linkedin.com/in/khoyummasalik">
+                <img src="1.jpg" alt="1 Picture" id="1-pic" />
+            </a>
             <h1>Khoyum Masalik</h1>
-            <p>Fullstack Developer</p>
+            <p><i class='bx bx-laptop'></i> Fullstack Developer</p>
         </div>
         <div class="links">
-            <a href="https://www.instagram.com/khoyum_28" class="link">Instagram</a>
-            <a href="https://wa.me/6282246108750" class="link">WhatsApp</a>
-            <a href="https://github.com/KhoyumMasalik" class="link">GitHub</a>
-            <a href="https://www.linkedin.com/in/khoyum-masalik-3899482a0/" class="link">LinkedIn</a>
+            <a href="https://www.instagram.com/khoyum_28" class="link"><i class='bx bxl-instagram'></i> Instagram</a>
+            <a href="https://github.com/KhoyumMasalik" class="link"><i class='bx bxl-github'></i> GitHub</a>
+            <a href="https://wa.me/6282246108750" class="link"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
         </div>
     </div>
+
+    <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
 </body>
 
 </html>
