--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 <body>
     <div class="container">
         <div class="profile">
-            <a href="https://www.linkedin.com/in/khoyummasalik">
+            <a target="_blank" href="https://www.linkedin.com/in/khoyummasalik">
                 <img src="1.jpg" alt="1 Picture" id="1-pic" />
             </a>
             <h1>Khoyum Masalik</h1>
             <p><i class='bx bx-laptop'></i> Fullstack Developer</p>
         </div>
         <div class="links">
-            <a href="https://www.instagram.com/khoyum_28" class="link"><i class='bx bxl-instagram'></i> Instagram</a>
-            <a href="https://github.com/KhoyumMasalik" class="link"><i class='bx bxl-github'></i> GitHub</a>
-            <a href="https://wa.me/6282246108750" class="link"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
+            <a target="_blank" href="https://www.instagram.com/khoyum_28" class="link"><i class='bx bxl-instagram'></i>
+                Instagram</a>
+            <a target="_blank" href="https://github.com/KhoyumMasalik" class="link"><i class='bx bxl-github'></i>
+                GitHub</a>
+            <a target="_blank" href="https://wa.me/6282246108750" class="link"><i class='bx bxl-whatsapp'></i>
+                WhatsApp</a>
         </div>
     </div>
 
